<resources>
    <string name="app_name">设计家服务端</string>

    <!--projectList bottom tab-->
    <string name="main_tab_task">任务</string>
    <string name="main_tab_issue">问题</string>
    <string name="main_tab_session">群聊</string>

    <!-- projectDetails bottom tab-->
    <string name="project_details_tab_patrol">巡查</string>
    <string name="project_details_tab_issue">问题</string>
    <string name="project_details_tab_session">群聊</string>

    <!-- 弹出框里的文字内容 -->
    <string name="popup_save_update_save">保存修改</string>
    <string name="popup_save_update_delete">删除修改</string>
    <string name="popup_save_update_cancel">取消</string>
    <string name="popup_clear_cache_title">清除缓存数据</string>
    <string name="popup_clear_cache_confirm">确定</string>

    <!-- 节点详情添加备注提示语 -->
    <string name="editText_hint_text">添加品牌等信息</string>

    <!-- 个人中心里的文本 -->
    <string name="personal_center_my_project">全部项目</string>
    <string name="personal_center_completed_project">已完成项目</string>
    <string name="personal_center_more">更多</string>
    <string name="personal_center_more_clear">清除缓存</string>
    <string name="personal_center_more_about">关于APP</string>
    <string name="personal_center_more_logout">退出登陆</string>

    <!-- toolBar menu text-->
    <string name="menu_search">搜索</string>
    <string name="menu_screen">筛选</string>
    <string name="menu_project_info">项目信息</string>
    <string name="menu_project_message">消息中心</string>
    <string name="toolbar_task_title">今日任务</string>
    <string name="toolbar_question_title">问题列表</string>
    <string name="toolbar_groupChat_title">群聊列表</string>

    <!--有问题有更新 text-->
    <string name="has_question">有问题</string>
    <string name="has_update">有更新</string>

    <!--项目列表adapter里对应的施工状态-->
    <string name="project_open">开工交底</string>
    <string name="project_ready">排期完毕</string>
    <string name="project_inProgress">施工阶段</string>
    <string name="project_completion">完成</string>

    <!--任务列表adapter里对应的施工状态-->
    <string name="task_open">未开始</string>
    <string name="task_reserving">待预约</string>
    <string name="task_inProgress">进行中</string>
    <string name="task_delayed">已延期</string>
    <string name="task_qualified">合格</string>
    <string name="task_unqualified">不合格</string>
    <string name="task_resolved">验收通过</string>
    <string name="task_rejected">验收拒绝</string>
    <string name="task_reinspection">强制复验</string>
    <string name="task_rectification">监督整改</string>
    <string name="task_reinspecting">复验中</string>


</resources>
