<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_bottom_bg_shape"
            android:divider="@drawable/linearlayout_divider_hor_shape"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_cache_title"
                    style="@style/popup_save_update_textview_style"
                    android:text="@string/popup_clear_cache_title"
                    android:textColor="@color/gray"
                    tools:text="@string/popup_clear_cache_title" />

                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/spacing_padding_normal"
                    android:text="@string/popup_clear_cache_title"
                    android:textSize="@dimen/font_small"
                    android:textColor="@color/gray"
                    tools:text="@string/popup_clear_cache_title" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_cache_confirm"
                style="@style/popup_save_update_textview_style"
                android:background="@drawable/popup_textview_bottomradius_bg_selector"
                android:text="@string/popup_clear_cache_confirm"
                android:textColor="@color/blue"
                tools:text="@string/popup_clear_cache_confirm" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />


        <TextView
            android:id="@+id/tv_cache_cancel"
            style="@style/popup_save_update_textview_style"
            android:background="@drawable/popup_textview_allradius_bg_selector"
            android:text="@string/popup_save_update_cancel"
            android:textColor="@color/blue"
            tools:text="取消" />

    </LinearLayout>


</FrameLayout>