<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_white"
    android:clickable="true"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_padding_double" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/linearlayout_divider_hor_shape"
            android:dividerPadding="@dimen/spacing_padding_double"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tv_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/spacing_padding_normal2"
                android:paddingEnd="@dimen/spacing_padding_double2"
                android:paddingStart="@dimen/spacing_padding_double2"
                android:paddingTop="@dimen/spacing_padding_normal2"
                android:text="@string/personal_center_more_clear"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_about_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_next"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/spacing_padding_normal2"
                android:paddingEnd="@dimen/spacing_padding_double2"
                android:paddingStart="@dimen/spacing_padding_double2"
                android:paddingTop="@dimen/spacing_padding_normal2"
                android:text="@string/personal_center_more_about"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_padding_third" />

    <TextView
        android:id="@+id/tv_logout_app"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_margin_double"
        android:layout_marginEnd="@dimen/spacing_margin_double"
        android:padding="@dimen/spacing_padding_double"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal"
        android:background="@drawable/personal_center_logout_selector"
        android:text="@string/personal_center_more_logout"/>

</LinearLayout>