<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_tab_bottom_shape">


    <RadioGroup
        android:id="@+id/designer_main_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_55"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/enterprise_task_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/main_tab_bottom_textview_selector"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:button="@null"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:drawableTop="@drawable/main_tab_bottom_task_selector"
            android:text="@string/main_tab_task" />

        <RadioButton
            android:id="@+id/enterprise_issue_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/main_tab_bottom_textview_selector"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:button="@null"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:drawableTop="@drawable/main_tab_bottom_issue_selector"
            android:text="@string/main_tab_issue" />

        <RadioButton
            android:id="@+id/enterprise_session_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/main_tab_bottom_textview_selector"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:button="@null"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:drawableTop="@drawable/main_tab_bottom_session_selector"
            android:text="@string/main_tab_session" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_msg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_6"
            android:layout_marginLeft="@dimen/size_6"
            android:background="@drawable/redsharp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_gron_msg_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>